objects/SLSI__Widget__c.object
<CustomObject>
    <fields>
        <fullName>SLSI__Configuration1__c</fullName>
        <label>Configuration</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SLSI__Configuration__c</fullName>
        <label>Configuration</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SLSI__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SLSI__Help_Link__c</fullName>
        <description>Link to Knowledge article about the widget on Help website</description>
        <label>Help Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SLSI__Namespace__c</fullName>
        <label>Namespace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLSI__Regions__c</fullName>
        <label>Regions</label>
        <picklist>
            <picklistValues>
                <fullName>HeaderUserInfo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HeaderLogoSection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HeaderNavigationSection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BannerRegion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LeftSideBar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MainSection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RightSideBar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FooterSection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MobileMainSection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LeftMainSection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RightMainSection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LeftHalfSection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RightHalfSection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MainFullSection</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SLSI__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SLSI__isDesktop__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Desktop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLSI__isMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Mobile</label>
        <type>Checkbox</type>
    </fields>
    <label>Widget</label>
    <listViews>
        <fullName>SLSI__All</fullName>
        <columns>NAME</columns>
        <columns>SLSI__Description__c</columns>
        <columns>SLSI__Configuration__c</columns>
        <columns>SLSI__Regions__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>SLSI__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Widget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Widgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SLSI__Unique_Name</fullName>
        <active>true</active>
        <errorConditionFormula>IF( LOWER(VLOOKUP($ObjectType.SLSI__Widget__c.Fields.Name ,$ObjectType.SLSI__Widget__c.Fields.Name , Name)) = LOWER(Name) &amp;&amp; (ISCHANGED(Name) || ISNEW()) , true, false
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Widget Name must be unique</errorMessage>
    </validationRules>
</CustomObject>